kustomize/base/ingress-gateway-gateway-prod-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
  namespace: ingress-gateway
  labels:
    app.kubernetes.io/part-of: connectivity-link
    argocd.argoproj.io/managed-by: openshift-gitops
    kuadrant.io/lb-attribute-geo-code: EU
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.globex.placeholder"
      name: api
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: api-tls
        mode: Terminate
